# MinisSkills

./: LICENSE  README.md
doubao-tts/: SKILL.md
doubao-tts/scripts/: tts.py
douyin-downloader/scripts/: transcribe_audio.py
github-sync-helper/: SKILL.md
github-sync-helper/scripts/: gh_sync.sh
maimai-hub/: SKILL.md
memos-api/: SKILL.md
memos-api/references/: memos-api-reference.md
nano-banana/: SKILL.md
nano-banana/scripts/: batch.py  edit.py  gen.py
skills/self-improving-agent/: SKILL.md
skills/self-improving-agent/scripts/: minis_auto_log.sh
spotify-hub/: SKILL.md
spotify-hub/scripts/: spotify.py  spotify_auth.py
weibo-hub/: SKILL.md  pyproject.toml
weibo-hub/scripts/: __init__.py  auth.py  client.py  constants.py  exceptions.py
