[project]
name = "weibo-hub"
version = "0.1.0"
description = "Lightweight Weibo skill for Minis — httpx only, no CLI layer"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
